--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/ProyectoSeguridad.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.postgresql-42.1.4.jar=C:\\Users\\Juan Manuel\\Downloads\\postgresql-42.1.4.jar
+file.reference.postgresql-42.1.4.jar-1=C:\\Users\\Computer-1\\Downloads\\Setup's\\Base de Datos\\postgresql-42.1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.1.4.jar}
+    ${file.reference.postgresql-42.1.4.jar}:\
+    ${file.reference.postgresql-42.1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
