--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.postgresql-42.1.4.jar=C:\\Users\\Juan Manuel\\Downloads\\postgresql-42.1.4.jar
 file.reference.postgresql-42.1.4.jar-1=C:\\Users\\Juan Manuel\\Downloads\\postgresql-42.1.4.jar
+file.reference.postgresql-42.1.4.jar-2=/Users/rafaelpelacchi/Downloads/postgresql-42.1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -113,7 +114,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.postgresql-42.1.4.jar}:\
-    ${file.reference.postgresql-42.1.4.jar-1}
+    ${file.reference.postgresql-42.1.4.jar-1}:\
+    ${file.reference.postgresql-42.1.4.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
