--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.postgresql-42.1.4.jar=C:\\Users\\Computer-1\\Downloads\\Setup's\\Base de Datos
-user.properties.file=C:\\Users\\Computer-1\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\Juan Manuel\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
