--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,4 @@
 compile.on.save=true
 file.reference.postgresql-42.1.4.jar=C:\\Users\\Computer-1\\Downloads\\Setup's\\Base de Datos
-user.properties.file=/Users/rafaelpelacchi/Library/Application Support/NetBeans/8.2/build.properties
+file.reference.postgresql-42.1.4.jar-2=C:\\Users\\Computer-1\\Downloads\\Setup's\\Base de Datos\\postgresql-42.1.4.jar
+user.properties.file=C:\\Users\\Computer-1\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
