--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ excludes=
 file.reference.postgresql-42.1.4.jar=C:\\Users\\Juan Manuel\\Downloads\\postgresql-42.1.4.jar
 file.reference.postgresql-42.1.4.jar-1=C:\\Users\\Juan Manuel\\Downloads\\postgresql-42.1.4.jar
 file.reference.postgresql-42.1.4.jar-3=C:\\Users\\Juan Manuel\\Downloads\\postgresql-42.1.4.jar
+file.reference.postgresql-42.1.4.jar-4=C:\\Users\\Juan Manuel\\Downloads\\postgresql-42.1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -594,7 +595,8 @@ javac.classpath=\
     ${file.reference.postgresql-42.1.4.jar}:\
     ${file.reference.postgresql-42.1.4.jar-1}:\
     <<<<<<< HEAD:\
-    ${file.reference.postgresql-42.1.4.jar-3}
+    ${file.reference.postgresql-42.1.4.jar-3}:\
+    ${file.reference.postgresql-42.1.4.jar-4}
     ${file.reference.postgresql-42.1.4.jar-2}:\
     ${file.reference.postgresql-42.1.4.jar-3}
 =======
