Arreglos de diseno

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1250,7 +1250,9 @@ javac.classpath=\
     <<<<<<< HEAD:\
     ${file.reference.postgresql-42.1.4.jar-3}:\
     ${file.reference.postgresql-42.1.4.jar-4}:\
-    ${file.reference.postgresql-42.1.4.jar-5}
+    ${file.reference.postgresql-42.1.4.jar-5}:\
+    ${libs.absolutelayout.classpath}:\
+    ${libs.beans-binding.classpath}
     ${file.reference.postgresql-42.1.4.jar-2}:\
     ${file.reference.postgresql-42.1.4.jar-3}
 =======
