--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1251,8 +1251,7 @@ javac.classpath=\
     ${file.reference.postgresql-42.1.4.jar-3}:\
     ${file.reference.postgresql-42.1.4.jar-4}:\
     ${file.reference.postgresql-42.1.4.jar-5}:\
-    ${libs.absolutelayout.classpath}:\
-    ${libs.beans-binding.classpath}
+    ${libs.absolutelayout.classpath}
     ${file.reference.postgresql-42.1.4.jar-2}:\
     ${file.reference.postgresql-42.1.4.jar-3}
 =======
